--- a/application-monitor-client/pom.xml
+++ b/application-monitor-client/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>application-monitor</artifactId>
 		<version>${global.version}</version>
 	</parent>
-	
+
 	<artifactId>application-monitor-client</artifactId>
 
 	<packaging>war</packaging>
@@ -16,6 +16,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 
 	<dependencies>
@@ -25,7 +27,7 @@
 			<version>7.0</version>
 			<scope>provided</scope>
 		</dependency>
-		
+ 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -37,7 +39,7 @@
 	<build>
 		<finalName>application-monitor-client</finalName>
 		<plugins>
-		<plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>1.4.0</version>
