--- a/application-monitor-server/pom.xml
+++ b/application-monitor-server/pom.xml
@@ -14,6 +14,12 @@
 	<name>application-monitor-server</name>
 	<url>http://maven.apache.org</url>
 	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>javax</groupId>
@@ -26,7 +32,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
-			<scope>test</scope>
+			<scope>test</scope> 
 		</dependency>
 	</dependencies>
 	<build>
